--- a/heterogeneity.bib
+++ b/heterogeneity.bib
@@ -1076,6 +1076,15 @@
   year={2011}
 }
 
+@article{xu2015plant,
+  title={Plant Photosynthesis Phenomics Data Quality Control},
+  author={Xu, Lei and Cruz, Jeffrey A and Savage, Linda J and Kramer, David M and Chen, Jin},
+  journal={Bioinformatics},
+  pages={btu854},
+  year={2015},
+  publisher={Oxford Univ Press}
+}
+
 @article{fiorani2013future,
   title={Future scenarios for plant phenotyping},
   author={Fiorani, F and Schurr, U},
@@ -1305,6 +1314,13 @@
   author={Yin, X and Liu, X and Chen, J and Kramer, DM},
   journal={IEEE International Conference on Image Processing},
   year={2014}
+}
+
+@techreport{barrow1977parametric,
+  title={Parametric correspondence and chamfer matching: Two new techniques for image matching},
+  author={Barrow, Harry G and Tenenbaum, Jay M and Bolles, Robert C and Wolf, Helen C},
+  year={1977},
+  institution={DTIC Document}
 }
 
 @article{song1999exploring,
